# heroes-1c-extractor

./: .coverage  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  1c.todo.md  1c_webhook_documentation.md  BLOB_ANALYSIS_REPORT.md  CODEBASE_ANALYSIS.md  DOCKER_STATUS.md  Dockerfile  Makefile  PROJECT_STRUCTURE_DESIGN.md  README standards.md  README.md  all_documents.json  all_documents.xml  analyze_1cd_capabilities.py  analyze_1cd_example.py  analyze_1cd_structure.py  analyze_blob_data.py  analyze_complete_1c_data.py  analyze_flower_data.py  analyze_flowers_data.py  analyze_nomenclature.py  analyze_table_structure.py  analyze_with_linux_emulation.py  coverage.xml  debug_row_structure.py  demo_ctool1cd.py  document90_sample.json  documents_example.xml  extract_all_document_data.py  extract_and_test_ctool1cd.py  extract_document_fields.py  extracted_documents.json  extracted_with_methods.json  final_1cd_analysis.py  final_documents.json  (+26 more)
heroes_platform/: .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  Dockerfile  MCP_CONFIGURATION_STANDARD.md  MCP_INSTALLATION_REPORT.md  MCP_SERVERS_SETUP.md  Makefile  POTPIE_INSTALLATION_REPORT.md  POTPIE_INTEGRATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SELF_HOSTED.md  THEME_INSTALLATION_REPORT.md  VALIDATE_ACTUAL_OUTCOME_INTEGRATION.md  __init__.py  check_dependencies.py  codecov.yml  coverage.xml  dependencies_matrix.md  doc.todo.md  docker-compose.yml  docs_cli.py  fix_imports.py  ghost_posts.json  install.bat  install.sh  install_dependencies.sh  jsconfig.json  mcp_logs_monitoring_report.json  mypy.ini  package-lock.json  package.json  pot.todo.md  pyproject.toml  pyrightconfig.json  qa_reports.json  requirements.txt  requirements_fixed.txt  (+12 more)
heroes_platform/.archive/: CLEANUP_REPORT.md  MIGRATION_GUIDE.md  PLAYWRIGHT_MCP.md  REFACTORING_COMPLETION_PLAN.md  SETUP_REPORT.md  fix_mcp_config_final.py  ghosts.todo.md  restore_telegram_mcp_config.py  telegram_validation_plan.md  test_complex_markdown.md  update_server_name.py
heroes_platform/.cursor/: mcp.json.example
heroes_platform/.cursor/rules/: mkdocs_symlinks.mdc
heroes_platform/.github/workflows/: ci.yml  deploy-docs.yml  ghost-publication-tests.yml  mcp-logs-monitoring.yml  validate-outcome.yml
heroes_platform/cocoindex-project/: PROJECT_STATUS.md  README.md  TESTING_REQUIREMENTS.md  docker-compose.yml
heroes_platform/cocoindex-project/docs/: COCOINDEX_SETUP.md
heroes_platform/cocoindex-project/flows/: quickstart.py  simple_flow.py
heroes_platform/cocoindex-project/tests/: test_cocoindex.py  test_embeddings.py  test_integration.py
heroes_platform/code-quality-template/: .pre-commit-config.yaml  CODE_QUALITY_AUTOMATION.md  Makefile  QUALITY_REPORT.md  README.md  requirements-dev.txt  requirements.txt
heroes_platform/code-quality-template/.cursor/: mcp-enhanced.json
heroes_platform/code-quality-template/scripts/: ruff_monitor.py
heroes_platform/code-quality-template/src/: example.py
heroes_platform/code-quality-template/tests/: test_example.py  test_ruff_monitor.py
heroes_platform/config/: README.md  ghost.env.example  ghost_blogs.json  potpie.env.example
heroes_platform/data/indices/: cocoindex_basic_index.txt  python_files_index.txt
heroes_platform/docs/: mcp-logs-monitoring-guide.md
heroes_platform/docs/decisions/: autodocstring-integration-decision.md
heroes_platform/health_mcp/: requirements.txt
heroes_platform/health_mcp/src/: health_mcp_server.py
heroes_platform/health_mcp/tests/: test_health_mcp.py
heroes_platform/heroes_mcp/: .doc_state.json  .pre-commit-config.yaml  .pylintrc  HEROES_MCP_UPDATE_REPORT.md  Makefile  README.md  README_YANDEX_DIRECT.md  TELEGRAM_INTEGRATION_COMPLETE.md  __init__.py  coverage.xml  ecosystem.config.js  jtbd_scenarios.json  mcp_diagnostic_plan.md  mypy.ini  playwright.config.js  py.typed  pytest.ini  requirements.txt  start_server.sh  test_active_validation.py  test_analyze_output_gap.py  yandex_direct_integration.py
heroes_platform/heroes_mcp/.cursor/: settings.json
heroes_platform/heroes_mcp/cache/: README.md  cache_metadata.json
heroes_platform/heroes_mcp/config/: README.md  n8n_config.json  production.env
heroes_platform/heroes_mcp/docs/: CLEANUP_REPORT.md  conf.py  (+15 more)
heroes_platform/incident/: ai_incident_20250821_gap_analysis_placement.md  ai_incident_20250821_improvement_vs_compliance.md  ai_incident_20250821_structural_deviation.md
heroes_platform/output/: ghost_blog_detailed_posts_list.md  ghost_blog_evidence_analysis.md  ghost_blog_qa_analysis.md  ghost_cleanup_final_report.md  ghost_deletion_log.json  ghost_deletion_report.json  ghost_post_decisions.json
heroes_platform/playwright-mcp/: README.md  playwright_mcp_server.py  requirements.txt
heroes_platform/playwright-report/: index.html
heroes_platform/scripts/: analyze_duplicates.py  create_campaign_template.py  create_cocoindex_basic.py  create_enhanced_campaign_template.py  create_functionality_map.py  create_google_sheets_template.py  create_vipavenue_campaign_template.py  download_service_account_key.py  get_google_oauth_tokens.py  get_keychain_json.py  get_yandex_oauth_tokens.py  search_before_create_checklist.md  secure_service_account.py  setup_mcp_config.py  test_mcp_logs_monitoring.py  test_potpie_integration.py
heroes_platform/self-hosted-solutions/: Makefile  QUICK_START.md  README.md  access_info.html  start-all.sh  vipavenue-adjust-appmetrica.html
heroes_platform/shared/: CORRECT_ARCHITECTURE_ANALYSIS.md  FINAL_ANALYSIS.md  __init__.py  correct_mcp_config.json  credentials_manager.py  credentials_wrapper.py  mcp_google_sheets_server.py
heroes_platform/site/: 404.html  index.html
heroes_platform/src/: __init__.py
heroes_platform/test_data/: test_webhook_data.json
heroes_platform/tests/: __init__.py  conftest.py  ghost_tests_compliance_report.md  simple_test.py  test_config.py  test_ghost_api_client.py  test_ghost_integration.py  test_heroes_platform.py  test_main_files.py  test_mkdoc_validation.py  test_root_files.py  test_telegram_mcp.py
heroes_platform/utils/: __init__.py
(+1482 files in other folders)
